feat: js file added - project ended

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Bateria</h1>
+    <h1>Drums JS</h1>
 
     <div class="keys">
         <div data-key="keyq" class="key">Q</div>
@@ -24,11 +24,12 @@
         <div data-key="keyc" class="key">C</div>
     </div>
     <div class="composer">
-        <input type="text" id="input" placeholder="Faça uma composição..." />
-        <button>Tocar</button>
+        <input type="text" id="input" placeholder="Make a song..." />
+        <button>Play</button>
+        <p></p>
     </div>
 
-    <footer>Criado pela B7Web</footer>
+    <footer>Created by <a href="https://github.com/JuniorUbarana">Junior Ubarana</a> at <strong><a href="https://b7web.com.br/">B7Web</a> Week Project</strong> - "7 Projetos em 7 Dias"</footer>
 
     <audio id="s_keyq" src="sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="sounds/keyw.wav"></audio>
